--- a/te.html
+++ b/te.html
@@ -1,5 +1,5 @@
 <Body style="background-color:#1abc9c">
 
-<h1 style="padding-top:20%; padding-bot:20%; text-align:center"> Bienvenu </h1>
+<h1 style="padding-top:20%; padding-bot:20%; text-align:center;l color:#FFFFFF"> Bienvenu </h1>
 
 </Body>
