Ajout d'un deuxieme texte

--- a/te.html
+++ b/te.html
@@ -2,4 +2,6 @@
 
 <h1 style="padding-top:20%; padding-bot:20%; text-align:center; color:#FFFFFF"> Bienvenu </h1>
 
+<h2>Juste un ajout de texte </h2>
+
 </Body>
