--- a/te.html
+++ b/te.html
@@ -2,6 +2,6 @@
 
 <h1 style="padding-top:20%; padding-bot:20%; text-align:center; color:#FFFFFF"> Bienvenu </h1>
 
-<h2>Juste un ajout de texte </h2>
+<h2 style="padding-top:20%; padding-bot:20%; text-align:center">Juste un ajout de texte </h2>
 
 </Body>
