--- a/te.html
+++ b/te.html
@@ -4,4 +4,8 @@
 
 <h2 style="padding-top:20%; padding-bot:20%; text-align:center">Juste un ajout de texte </h2>
 
+<h3 style="padding-top:20%; text-align:center">Juste un ajout de texte </h3>
+
+<h3 style="padding-top:20%; text-align:center">Juste un ajout de texte </h3>
+
 </Body>
